--- a/src/pages/login/index.module.scss
+++ b/src/pages/login/index.module.scss
@@ -1,3 +1,9 @@
-.contet{
-    background-color:bisque
+.login_table{
+    width: 100px;
+}
+.layout{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
